--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -126,6 +126,9 @@
     <ClInclude Include="Point2D.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
